--- a/jquery/Task2/style.css
+++ b/jquery/Task2/style.css
@@ -46,16 +46,34 @@ li {
   height: 40px;
   padding-left: 20px;
   background: #ffffff;
+  position: relative;
+}
+
+li:after{
+    content: 'X';
+    width: 10%;
+    height: 100%;
+    background: red;
+    color: white;
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-align: center;
+    opacity: 0;
+}
+
+li:hover:after{
+  opacity: 1;
 }
 
 li:nth-child(2n) {
   background: #f7f7f7;
 }
 
-li:hover span {
+/*li:hover span {
   width: 40px;
   opacity: 1;
-}
+}*/
 
 #container {
   width: 300px;
