--- a/boilerplates/react-es2015-scss/src/scss/style.scss
+++ b/boilerplates/react-es2015-scss/src/scss/style.scss
@@ -1,9 +1,65 @@
-$bgColor: white;
+
+@import "reset";
+
+$bgColor: gray;
 
 body {
 	background-color: $bgColor;
-	
-	h1 {
-		border: 5px solid black;
+	height: 100vh;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	color: #fff;
+}
+
+h1 {
+	font-size: 22px;
+}
+
+.wrapper{
+	width: 80%;
+	margin: 0 auto;
+	padding: 0;
+	box-sizing: border-box;
+	height: 100vh;
+
+	.selection,.results{
+		width: 50%;
+		display: inline-block;
+		box-sizing: border-box;
+		min-height: 200px;
+		border: 1px solid gray;
+		float: left;
 	}
+
+	.fishList > div{
+		margin: 0 auto;
+		padding: 5px 0;
+		text-align: center;
+		width: 50%;
+		min-height: 50px;
+		span{
+			width: 50%;
+			background: gray;
+			height: 100%;
+			display: inline-block;
+			margin: 5px 0;
+			padding: 5px 10px;
+			box-sizing: border-box;
+			float: left;
+			margin-right: 5%;
+		}
+		a{
+			background: green;
+			float: left;
+			margin-left: 2%;
+			width: 30%;
+			margin: 5px 0;
+			padding: 5px 10px;
+			box-sizing: border-box;
+		}
+	}
+
+
+
 }
