--- a/boilerplates/react-es2015-scss/src/scss/style.scss
+++ b/boilerplates/react-es2015-scss/src/scss/style.scss
@@ -1,7 +1,9 @@
 
 @import "reset";
+@import url(http://fonts.googleapis.com/css?family=Ubuntu:400,700);
+@import url(http://weloveiconfonts.com/api/?family=entypo|fontawesome|zocial);
 
-$bgColor: gray;
+$bgColor: #1f253d;
 
 body {
 	background-color: $bgColor;
@@ -10,53 +12,93 @@ body {
 	margin: 0;
 	padding: 0;
 	color: #fff;
+	font-family: 'Ubuntu', sans-serif;
 }
 
 h1 {
 	font-size: 22px;
+  text-align: center;
+  text-decoration: underline;
+  font-family: 'Ubuntu', sans-serif;
+  margin-bottom: 20px;
 }
 
 .wrapper{
 	width: 80%;
-	margin: 0 auto;
+	margin: 20px auto 0;
 	padding: 0;
 	box-sizing: border-box;
 	height: 100vh;
 
 	.selection,.results{
-		width: 50%;
+		width: 48%;
 		display: inline-block;
 		box-sizing: border-box;
 		min-height: 200px;
-		border: 1px solid gray;
 		float: left;
+		padding: 15px;
+		background: #394264;
+		border-radius: 5px;
+		margin: 1%;
+	}
+
+	.results .fishList > div a{
+		background: #cc324b;
+	}
+
+	.results .submit{
+		display: block;
+		width: 175px;
+		line-height: 50px;
+		font-size: 16px;
+		font-weight: 700;
+		text-align: center;
+		margin: 0 auto;
+		border-radius: 5px;
+		background: #4ebb4e;
+		margin-top: 10px;
 	}
 
 	.fishList > div{
 		margin: 0 auto;
-		padding: 5px 0;
+		padding: 8px 0;
 		text-align: center;
 		width: 50%;
-		min-height: 50px;
+		height: 50px;
+		box-sizing: border-box;
+
 		span{
-			width: 50%;
-			background: gray;
+			background: #11a8ab;
 			height: 100%;
 			display: inline-block;
-			margin: 5px 0;
-			padding: 5px 10px;
+			padding: 8px 10px;
+	    border-radius: 5px;
 			box-sizing: border-box;
 			float: left;
-			margin-right: 5%;
+			font-family: 'Ubuntu', sans-serif;
 		}
 		a{
-			background: green;
-			float: left;
-			margin-left: 2%;
-			width: 30%;
-			margin: 5px 0;
-			padding: 5px 10px;
+			background:#1a4e95;
+			float: right;
+			font-family: 'Ubuntu', sans-serif;
+			height: 30px;
+			width: 30px;
+			margin: 3px 0;
+			padding:4px 8px;
 			box-sizing: border-box;
+			border-radius: 50px;
+			border: 1px solid #fff;
+			overflow: hidden;
+			font-family: inherit;
+			font-size: inherit;
+			color: inherit;
+			cursor: pointer;
+			display: inline-block;
+			outline: none;
+			position: relative;
+			-webkit-transition: all 0.3s;
+			-moz-transition: all 0.3s;
+			transition: all 0.3s;
 		}
 	}
 
