--- a/project-new/src/scss/_variables.scss
+++ b/project-new/src/scss/_variables.scss
@@ -2,13 +2,8 @@
 $primary-color: #434343;
 $secondary-color: #fff;
 $accent-color: #ff6008;
-
-// Colors
-$color1: #24555C;
-$color2: #F2F5F8;
-$color3: #6DC0D1;
-$color4: #2D3638;
-$accent: #D24780;
+$lgt-black:#333;
+$lgt-gray:#f5f5f5;
 
 /*Breakpoints */
 $mobile-portrait: 320px;
