--- a/project-new/src/scss/style.scss
+++ b/project-new/src/scss/style.scss
@@ -6,10 +6,10 @@
 
 @import "./variables";
 
-@import "./susy";
-
 @import "./base";
 
 @import "./header";
+
+@import "./article";
 
 @import "./footer";
