--- a/project-new/src/scss/_header.scss
+++ b/project-new/src/scss/_header.scss
@@ -18,7 +18,7 @@ header{
     margin-left: 0;
     margin-right: 0;
     list-style: none;
-    color: #fff;
+    color: $secondary-color;
     //height:180px;
     @include breakpoint($mobile-landscape) {
       height: 40px;
@@ -173,19 +173,23 @@ input[type='button'] {
   height: 40px;
   border-radius: 30px;
   border: none;
-  background: white;
+  background: $secondary-color;
   box-sizing: border-box;
   display: inline-block;
-  color: #7d7f81;
+  color: darken($alt-gray, 10%);
   text-transform: uppercase;
   font-size: 12px;
+
+  &:hover{
+    background: darken($secondary-color, 10%);
+  }
   @include breakpoint($mobile-landscape) {
     width: 160px;
-    font-size: 16px;
+    font-size: 14px;
   }
 }
 
-.navigation:hover{
+.navigation:active{
   &::before ~ ul {
     background: green;
     display: block;
